# RelaGit

./: .gitignore  CMakeLists.txt  ConsoleUtils.h  HardCodedToGit.h  HttpClientUtils.h  NaturalLangToGit.h  OllamaToGit.h  README.md  RelaGit.cpp  StrUtils.h
